# t-systems-challenge

./: Caddyfile  Cargo.toml  Dockerfile  Dockerfile.caddy  Questions.md  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: FrontPage.vue  InteractiveBoard.vue  Map.vue
frontend/src/components/Dropdowns/: ConditionDD.vue  FilterDD.vue
frontend/src/components/dropdowns/: AlgorythmDD.vue  ConditionDD.vue  FilterDD.vue
frontend/src/components/graph/: CurrentLoad.vue
src/: backend.rs  main.rs  models.rs  runner.rs
src/matching/: cost_functions.rs  insert.rs  metric.rs  mod.rs  remove.rs  time_functions.rs
