[package]
name = "t-systems-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
warp = "0.3.7"

[[bin]]
name = "t-systems-challenge"
path = "src/main.rs"
